--- a/dust3r/datasets/utils/Best_pairs.ipynb
+++ b/dust3r/datasets/utils/Best_pairs.ipynb
@@ -5,9 +5,11 @@
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
+    "jupyter": {
+     "is_executing": true
+    },
     "ExecuteTime": {
-     "end_time": "2024-12-20T10:08:53.395524Z",
-     "start_time": "2024-12-20T10:08:50.568800Z"
+     "start_time": "2024-12-20T10:30:22.899020Z"
     }
    },
    "source": [
@@ -23,29 +25,18 @@
     "from dust3r.datasets import UnderWaterDataset"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": null
   },
   {
    "metadata": {
     "jupyter": {
      "is_executing": true
-    },
-    "ExecuteTime": {
-     "start_time": "2024-12-20T10:08:53.396807Z"
     }
    },
    "cell_type": "code",
    "source": "dataset = UnderWaterDataset(split='train', ROOT='/home/aleksandra/dense_glomap_output', resolution=224)",
    "id": "38859acdbd118601",
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/3199 [00:00<?, ?it/s]"
-     ]
-    }
-   ],
+   "outputs": [],
    "execution_count": null
   },
   {
