change run file

--- a/dust3r/datasets/utils/Best_pairs.ipynb
+++ b/dust3r/datasets/utils/Best_pairs.ipynb
@@ -5,10 +5,8 @@
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
+     "end_time": "2024-12-20T10:30:25.725836Z",
      "start_time": "2024-12-20T10:30:22.899020Z"
     }
    },
@@ -25,18 +23,29 @@
     "from dust3r.datasets import UnderWaterDataset"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 1
   },
   {
    "metadata": {
     "jupyter": {
      "is_executing": true
+    },
+    "ExecuteTime": {
+     "start_time": "2024-12-20T10:30:25.727167Z"
     }
    },
    "cell_type": "code",
    "source": "dataset = UnderWaterDataset(split='train', ROOT='/home/aleksandra/dense_glomap_output', resolution=224)",
    "id": "38859acdbd118601",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  3%|▎         | 107/3510 [00:32<20:00,  2.83it/s]"
+     ]
+    }
+   ],
    "execution_count": null
   },
   {
